--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "next": "15.3.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hotkeys-hook": "^5.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
